extends Area2D
class_name TalkingAmulet

# –ì–æ–≤–æ—Ä—è—â–∏–π –∞–º—É–ª–µ—Ç - –∑–∞–ø—É—Å–∫–∞–µ—Ç –¥–∏–∞–ª–æ–≥ –ø—Ä–∏ –ø—Ä–∏–±–ª–∏–∂–µ–Ω–∏–∏ –∏–≥—Ä–æ–∫–∞

@export var dialogue_resource: String = "dialog-1"
@export var auto_start: bool = true  # –ê–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏ –∑–∞–ø—É—Å–∫–∞—Ç—å –¥–∏–∞–ª–æ–≥
@export var one_time_only: bool = true  # –¢–æ–ª—å–∫–æ –æ–¥–∏–Ω —Ä–∞–∑
@export var activation_distance: float = 50.0  # –†–∞—Å—Å—Ç–æ—è–Ω–∏–µ –∞–∫—Ç–∏–≤–∞—Ü–∏–∏

var player: CharacterBody2D = null
var dialogue_started: bool = false
var is_player_near: bool = false

@onready var sprite: Sprite2D = $Sprite2D if has_node("Sprite2D") else null
@onready var collision: CollisionShape2D = $CollisionShape2D if has_node("CollisionShape2D") else null
@onready var interaction_area: CollisionPolygon2D = $CollisionPolygon2D if has_node("CollisionPolygon2D") else null




# –í–∏–∑—É–∞–ª—å–Ω—ã–µ —ç—Ñ—Ñ–µ–∫—Ç—ã
var glow_tween: Tween

func _ready():
	# –ù–∞—Å—Ç—Ä–∞–∏–≤–∞–µ–º –∫–æ–ª–ª–∏–∑–∏—é (—Å—Ç–∞–Ω–¥–∞—Ä—Ç–Ω—ã–µ –Ω–∞—Å—Ç—Ä–æ–π–∫–∏)
	collision_layer = 1  # –°—Ç–∞–Ω–¥–∞—Ä—Ç–Ω—ã–π —Å–ª–æ–π
	collision_mask = 1   # –í–∑–∞–∏–º–æ–¥–µ–π—Å—Ç–≤—É–µ—Ç —Å–æ —Å–ª–æ–µ–º 1 (–∏–≥—Ä–æ–∫)
	monitoring = true
	monitorable = true
	

	
	# –ù–∞—Å—Ç—Ä–∞–∏–≤–∞–µ–º —Å–∏–≥–Ω–∞–ª—ã
	body_entered.connect(_on_body_entered)
	body_exited.connect(_on_body_exited)
	
	# –ò—â–µ–º –∏–≥—Ä–æ–∫–∞ —Å –∑–∞–¥–µ—Ä–∂–∫–æ–π
	call_deferred("find_player")
	
	# –î–æ–±–∞–≤–ª—è–µ–º –≤ –≥—Ä—É–ø–ø—É
	add_to_group("dialogue_objects")
	
	# –ó–∞–ø—É—Å–∫–∞–µ–º —ç—Ñ—Ñ–µ–∫—Ç —Å–≤–µ—á–µ–Ω–∏—è
	start_glow_effect()

func find_player():
	player = get_tree().get_first_node_in_group("player")

func _process(_delta):
	# –≠–∫—Å—Ç—Ä–µ–Ω–Ω–∞—è —Ä–∞–∑–±–ª–æ–∫–∏—Ä–æ–≤–∫–∞ –¥–≤–∏–∂–µ–Ω–∏—è –ø–æ Escape
	if Input.is_action_just_pressed("ui_cancel") and player:
		if player.has_method("set_can_move"):
			player.set_can_move(true)
		if "can_move" in player:
			player.can_move = true
	
	# –ê–∫—Ç–∏–≤–∞—Ü–∏—è –∞–º—É–ª–µ—Ç–∞ –ø–æ –∫–ª–∞–≤–∏—à–µ T
	if Input.is_key_pressed(KEY_T) and player:
		var amulet = get_tree().get_first_node_in_group("amulet_character")
		if amulet and amulet.visible and amulet.is_clickable:
			amulet.use_amulet()
	
	if not dialogue_started and player:
		# –ü—Ä–æ–≤–µ—Ä—è–µ–º —Ä–∞—Å—Å—Ç–æ—è–Ω–∏–µ –¥–æ –∏–≥—Ä–æ–∫–∞
		var distance = global_position.distance_to(player.global_position)
		
		if distance <= activation_distance:
			if auto_start and not dialogue_started:
				start_dialogue()
			elif not auto_start and Input.is_action_just_pressed("ui_accept"):
				start_dialogue()

func _on_body_entered(body):
	"""–ò–≥—Ä–æ–∫ –≤–æ—à–µ–ª –≤ –æ–±–ª–∞—Å—Ç—å"""
	if body.is_in_group("player"):
		is_player_near = true
		
		# –£—Å–∏–ª–∏–≤–∞–µ–º —Å–≤–µ—á–µ–Ω–∏–µ
		if sprite:
			sprite.modulate = Color(1.5, 1.5, 1.0)
		
		# –ï—Å–ª–∏ –∞–≤—Ç–æ–∑–∞–ø—É—Å–∫ –≤–∫–ª—é—á–µ–Ω - —Å—Ä–∞–∑—É –∑–∞–ø—É—Å–∫–∞–µ–º –¥–∏–∞–ª–æ–≥
		if auto_start and not dialogue_started:
			start_dialogue()

func _on_body_exited(body):
	"""–ò–≥—Ä–æ–∫ –≤—ã—à–µ–ª –∏–∑ –æ–±–ª–∞—Å—Ç–∏"""
	if body.is_in_group("player"):
		is_player_near = false
		
		# –í–æ–∑–≤—Ä–∞—â–∞–µ–º –æ–±—ã—á–Ω–æ–µ —Å–≤–µ—á–µ–Ω–∏–µ
		if sprite:
			sprite.modulate = Color(1.2, 1.2, 0.8)

func start_dialogue():
	"""–ó–∞–ø—É—Å–∫–∞–µ—Ç –¥–∏–∞–ª–æ–≥"""
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º –Ω–µ –∑–∞–≤–µ—Ä—à–µ–Ω –ª–∏ —É–∂–µ —ç—Ç–æ—Ç –¥–∏–∞–ª–æ–≥
	var game_state = get_node("/root/GameStateManager")
	if game_state and game_state.is_dialogue_completed(dialogue_resource) and one_time_only:
		print("–î–∏–∞–ª–æ–≥ —É–∂–µ –∑–∞–≤–µ—Ä—à–µ–Ω: ", dialogue_resource)
		return
	
	if dialogue_started and one_time_only:
		return
	
	dialogue_started = true
	

	
	# –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –∏–≥—Ä–æ–∫–∞
	if player and player.has_method("set_can_move"):
		player.set_can_move(false)
	
	# –ü–æ–∫–∞–∑—ã–≤–∞–µ–º –∞–º—É–ª–µ—Ç-–ø–µ—Ä—Å–æ–Ω–∞–∂
	show_amulet_character()
	
	# –ó–∞–ø—É—Å–∫–∞–µ–º –¥–∏–∞–ª–æ–≥
	if DialogueManager:
		var dialogue_path = "res://dialogs/" + dialogue_resource + ".dialogue"
		var dialogue_res = load(dialogue_path)
		if dialogue_res:
			# –ü–æ–¥–∫–ª—é—á–∞–µ–º—Å—è –∫ —Å–∏–≥–Ω–∞–ª—É –æ–∫–æ–Ω—á–∞–Ω–∏—è –¥–∏–∞–ª–æ–≥–∞
			if not DialogueManager.dialogue_ended.is_connected(_on_dialogue_ended):
				DialogueManager.dialogue_ended.connect(_on_dialogue_ended)

			# –ü—Ä–æ–≤–µ—Ä—è–µ–º —á—Ç–æ –Ω–µ—Ç —É–∂–µ –∞–∫—Ç–∏–≤–Ω—ã—Ö balloon'–æ–≤
			var existing_balloons = get_tree().get_nodes_in_group("dialogue_balloon")
			if existing_balloons.size() > 0:
				return
			
			# –ò—Å–ø–æ–ª—å–∑—É–µ–º —Å—Ç–∞–Ω–¥–∞—Ä—Ç–Ω—ã–π balloon –ø–æ–∫–∞
			# –°–æ–∑–¥–∞–µ–º –∫–∞—Å—Ç–æ–º–Ω—ã–π balloon —Å –æ–∑–≤—É—á–∫–æ–π
			var balloon_scene = preload("res://addons/dialogue_manager/example_balloon/example_balloon.tscn")
			var voice_balloon = balloon_scene.instantiate()
			voice_balloon.set_script(preload("res://scripts/basic/dialogue/voice_balloon.gd"))
			get_tree().current_scene.add_child(voice_balloon)
			voice_balloon.start(dialogue_res, "start")
			
			# # –¢–æ–ª—å–∫–æ –∞–≤–∞—Ä–∏–π–Ω–æ–µ —Ä–∞–∑–±–ª–æ–∫–∏—Ä–æ–≤–∞–Ω–∏–µ —á–µ—Ä–µ–∑ 150 —Å–µ–∫—É–Ω–¥ –Ω–∞ —Å–ª—É—á–∞–π –∑–∞–≤–∏—Å–∞–Ω–∏—è
			# get_tree().create_timer(150.0).timeout.connect(func():
			# 	print("‚ö†Ô∏è –ê–í–ê–†–ò–ô–ù–û–ï –†–ê–ó–ë–õ–û–ö–ò–†–û–í–ê–ù–ò–ï - –¥–∏–∞–ª–æ–≥ –∑–∞–≤–∏—Å")
			# 	force_enable_movement()
			# )
		else:
			_on_dialogue_ended()
	else:
		show_simple_dialogue()
		_on_dialogue_ended()

func show_simple_dialogue():
	"""–ü–æ–∫–∞–∑—ã–≤–∞–µ—Ç –ø—Ä–æ—Å—Ç–æ–π –¥–∏–∞–ª–æ–≥"""
	var dialog = AcceptDialog.new()
	dialog.title = "–ì–æ–≤–æ—Ä—è—â–∏–π –∞–º—É–ª–µ—Ç"
	dialog.dialog_text = "–î–∏–∞–ª–æ–≥: " + dialogue_resource + "\n\n–ê–∫–∂–∞–Ω: –ü–æ–º–æ–≥–∏—Ç–µ! –í—ã—Ç–∞—â–∏—Ç–µ –º–µ–Ω—è –æ—Ç—Å—é–¥–∞!\n\n(–î–ª—è –ø–æ–ª–Ω–æ–≥–æ –¥–∏–∞–ª–æ–≥–∞ –Ω—É–∂–µ–Ω DialogueManager)"
	
	get_tree().current_scene.add_child(dialog)
	dialog.popup_centered()
	dialog.confirmed.connect(func(): dialog.queue_free())


func _on_dialogue_ended(resource = null):
	"""–í—ã–∑—ã–≤–∞–µ—Ç—Å—è –∫–æ–≥–¥–∞ –¥–∏–∞–ª–æ–≥ –∑–∞–∫–æ–Ω—á–∏–ª—Å—è"""
	print("=== –î–ò–ê–õ–û–ì –ó–ê–í–ï–†–®–ï–ù ===")
	
	# –û—Ç–º–µ—á–∞–µ–º –¥–∏–∞–ª–æ–≥ –∫–∞–∫ –∑–∞–≤–µ—Ä—à–µ–Ω–Ω—ã–π –≤ –≥–ª–æ–±–∞–ª—å–Ω–æ–º —Å–æ—Å—Ç–æ—è–Ω–∏–∏
	var game_state = get_node("/root/GameStateManager")
	if game_state:
		game_state.mark_dialogue_completed(dialogue_resource)
		print("‚úÖ –î–∏–∞–ª–æ–≥ –æ—Ç–º–µ—á–µ–Ω –∫–∞–∫ –∑–∞–≤–µ—Ä—à–µ–Ω–Ω—ã–π: ", dialogue_resource)
	
	# –í–ê–ñ–ù–û: –î–∞–µ–º –∞–º—É–ª–µ—Ç –∏–≥—Ä–æ–∫—É –ø–æ—Å–ª–µ –¥–∏–∞–ª–æ–≥–∞ —Å –ê–∫–∂–∞–Ω–æ–º
	if dialogue_resource == "dialog-1":
		give_amulet_to_player()
	
	# –í–æ–∑–≤—Ä–∞—â–∞–µ–º —É–ø—Ä–∞–≤–ª–µ–Ω–∏–µ –∏–≥—Ä–æ–∫—É
	print("–í–æ–∑–≤—Ä–∞—â–∞–µ–º —É–ø—Ä–∞–≤–ª–µ–Ω–∏–µ –∏–≥—Ä–æ–∫—É...")
	if player and player.has_method("set_can_move"):
		player.set_can_move(true)
	
	# –ï—Å–ª–∏ –¥–∏–∞–ª–æ–≥ –æ–¥–Ω–æ—Ä–∞–∑–æ–≤—ã–π - —Å–∫—Ä—ã–≤–∞–µ–º –∞–º—É–ª–µ—Ç –Ω–∞ –∫–∞—Ä—Ç–µ
	if one_time_only:
		hide_amulet()

func force_enable_movement():
	"""–ü—Ä–∏–Ω—É–¥–∏—Ç–µ–ª—å–Ω–æ –≤–∫–ª—é—á–∞–µ—Ç –¥–≤–∏–∂–µ–Ω–∏–µ –∏–≥—Ä–æ–∫–∞"""
	print("üîß –ü–†–ò–ù–£–î–ò–¢–ï–õ–¨–ù–û–ï –†–ê–ó–ë–õ–û–ö–ò–†–û–í–ê–ù–ò–ï –î–í–ò–ñ–ï–ù–ò–Ø")
	if player:
		if player.has_method("set_can_move"):
			player.set_can_move(true)
		# –¢–∞–∫–∂–µ –ø—Ä–æ–≤–µ—Ä–∏–º –ø–µ—Ä–µ–º–µ–Ω–Ω—É—é –Ω–∞–ø—Ä—è–º—É—é
		if "can_move" in player:
			player.can_move = true
			print("‚úì can_move —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω –≤ true –Ω–∞–ø—Ä—è–º—É—é")
		print("‚úì –î–≤–∏–∂–µ–Ω–∏–µ –ø—Ä–∏–Ω—É–¥–∏—Ç–µ–ª—å–Ω–æ —Ä–∞–∑–±–ª–æ–∫–∏—Ä–æ–≤–∞–Ω–æ")



func give_amulet_to_player():
	"""–î–∞–µ—Ç –∞–º—É–ª–µ—Ç –∏–≥—Ä–æ–∫—É –ø–æ—Å–ª–µ –¥–∏–∞–ª–æ–≥–∞"""
	print("üîÆ –î–∞–µ–º –∞–º—É–ª–µ—Ç –∏–≥—Ä–æ–∫—É –ø–æ—Å–ª–µ –¥–∏–∞–ª–æ–≥–∞!")
	
	# –ò—Å–ø–æ–ª—å–∑—É–µ–º –≥–ª–æ–±–∞–ª—å–Ω—ã–π –º–µ–Ω–µ–¥–∂–µ—Ä —Å–æ—Å—Ç–æ—è–Ω–∏—è
	var game_state = get_node("/root/GameStateManager")
	if game_state:
		print("‚úÖ GameStateManager –Ω–∞–π–¥–µ–Ω, –≤—ã–∑—ã–≤–∞–µ–º give_amulet()")
		game_state.give_amulet()
		print("‚úÖ –ê–º—É–ª–µ—Ç –¥–∞–Ω —á–µ—Ä–µ–∑ GameStateManager")
	else:
		print("‚ùå GameStateManager –Ω–µ –Ω–∞–π–¥–µ–Ω! –ò—Å–ø–æ–ª—å–∑—É–µ–º —Å—Ç–∞—Ä—ã–π —Å–ø–æ—Å–æ–±...")
		# –ò—Å–ø–æ–ª—å–∑—É–µ–º –≥–ª–æ–±–∞–ª—å–Ω—ã–π –º–µ–Ω–µ–¥–∂–µ—Ä –∞–º—É–ª–µ—Ç–∞
		var amulet_manager = get_node("/root/AmuletManager")
		if amulet_manager:
			amulet_manager.give_amulet()
		else:
			print("AmuletManager –Ω–µ –Ω–∞–π–¥–µ–Ω! –ò—â–µ–º –∞–º—É–ª–µ—Ç –Ω–∞–ø—Ä—è–º—É—é...")
			# –ü—Ä—è–º–æ–π –ø–æ–∏—Å–∫ –∞–º—É–ª–µ—Ç–∞
			var amulet = get_tree().root.find_child("AmuletCharacter", true, false)
			if amulet and amulet.has_method("show_amulet"):
				amulet.show_amulet()



func hide_amulet():
	"""–°–∫—Ä—ã–≤–∞–µ—Ç –∞–º—É–ª–µ—Ç –ø–æ—Å–ª–µ –¥–∏–∞–ª–æ–≥–∞"""
	print("–ê–º—É–ª–µ—Ç –∏—Å—á–µ–∑–∞–µ—Ç —Å –∫–∞—Ä—Ç—ã...")
	
	# –ü—Ä–æ—Å—Ç–æ —Å–∫—Ä—ã–≤–∞–µ–º —Å–ø—Ä–∞–π—Ç (–±–µ–∑ –∞–Ω–∏–º–∞—Ü–∏–∏)
	if sprite:
		sprite.visible = false
	else:
		print("–ù–ï–¢–£–£.")

	
	# –û—Ç–∫–ª—é—á–∞–µ–º –∫–æ–ª–ª–∏–∑–∏—é, —á—Ç–æ–±—ã –Ω–µ–ª—å–∑—è –±—ã–ª–æ —Å–Ω–æ–≤–∞ –∞–∫—Ç–∏–≤–∏—Ä–æ–≤–∞—Ç—å
	collision_layer = 0
	collision_mask = 0
	monitoring = false
	monitorable = false
	
	print("‚úì –ê–º—É–ª–µ—Ç —Å–∫—Ä—ã—Ç —Å –∫–∞—Ä—Ç—ã")

func start_glow_effect():
	"""–ó–∞–ø—É—Å–∫–∞–µ—Ç —ç—Ñ—Ñ–µ–∫—Ç —Å–≤–µ—á–µ–Ω–∏—è –∞–º—É–ª–µ—Ç–∞"""
	if not sprite:
		return
	
	glow_tween = create_tween()
	glow_tween.set_loops()
	
	# –ü–ª–∞–≤–Ω–æ–µ —Å–≤–µ—á–µ–Ω–∏–µ
	glow_tween.tween_property(sprite, "modulate", Color(1.5, 1.5, 0.6), 1.5)
	glow_tween.tween_property(sprite, "modulate", Color(1.0, 1.0, 0.8), 1.5)

func force_start_dialogue():
	"""–ü—Ä–∏–Ω—É–¥–∏—Ç–µ–ª—å–Ω–æ –∑–∞–ø—É—Å–∫–∞–µ—Ç –¥–∏–∞–ª–æ–≥ (–¥–ª—è –≤—ã–∑–æ–≤–∞ –∏–∑ –∫–æ–¥–∞)"""
	dialogue_started = false  # –°–±—Ä–∞—Å—ã–≤–∞–µ–º —Ñ–ª–∞–≥
	start_dialogue()

# –§—É–Ω–∫—Ü–∏—è –¥–ª—è —Ç–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏—è –∏–∑ –∫–æ–Ω—Å–æ–ª–∏
func test_dialogue():
	"""–¢–µ—Å—Ç–æ–≤–∞—è —Ñ—É–Ω–∫—Ü–∏—è –¥–ª—è –∑–∞–ø—É—Å–∫–∞ –∏–∑ –∫–æ–Ω—Å–æ–ª–∏"""
	force_start_dialogue()

# –§—É–Ω–∫—Ü–∏—è –¥–ª—è –¥–æ–±–∞–≤–ª–µ–Ω–∏—è –≤ –∏–≥—Ä–æ–∫–∞
func show_amulet_character():
	"""–ü–æ–∫–∞–∑—ã–≤–∞–µ—Ç –∞–º—É–ª–µ—Ç-–ø–µ—Ä—Å–æ–Ω–∞–∂ –≤ UI"""
	# –ò—â–µ–º —Å—É—â–µ—Å—Ç–≤—É—é—â–∏–π –∞–º—É–ª–µ—Ç-–ø–µ—Ä—Å–æ–Ω–∞–∂
	var existing_amulet = get_tree().get_first_node_in_group("amulet_character")
	
	if not existing_amulet:
		# –°–æ–∑–¥–∞–µ–º –Ω–æ–≤—ã–π –∞–º—É–ª–µ—Ç-–ø–µ—Ä—Å–æ–Ω–∞–∂
		var amulet_scene = preload("res://scenes/dialogue/amulet_character.tscn")
		var amulet_character = amulet_scene.instantiate()
		
		# –î–æ–±–∞–≤–ª—è–µ–º –≤ UI (CanvasLayer)
		var ui_layer = get_tree().get_first_node_in_group("ui_layer")
		if ui_layer:
			ui_layer.add_child(amulet_character)
		else:
			# –î–æ–±–∞–≤–ª—è–µ–º –ø—Ä—è–º–æ –Ω–∞ —Å—Ü–µ–Ω—É
			get_tree().current_scene.add_child(amulet_character)
		
		amulet_character.add_to_group("amulet_character")
		existing_amulet = amulet_character
	
	# –ó–∞–ø—É—Å–∫–∞–µ–º –∞–Ω–∏–º–∞—Ü–∏—é –¥–∏–∞–ª–æ–≥–∞
	if existing_amulet and existing_amulet.has_method("on_dialogue_started"):
		existing_amulet.on_dialogue_started()

func hide_amulet_character():
	"""–°–∫—Ä—ã–≤–∞–µ—Ç –∞–º—É–ª–µ—Ç-–ø–µ—Ä—Å–æ–Ω–∞–∂"""
	var amulet_character = get_tree().get_first_node_in_group("amulet_character")
	if amulet_character and amulet_character.has_method("on_dialogue_ended"):
		amulet_character.on_dialogue_ended()
		
		# –ï—Å–ª–∏ –¥–∏–∞–ª–æ–≥ –æ–¥–Ω–æ—Ä–∞–∑–æ–≤—ã–π - —Å–∫—Ä—ã–≤–∞–µ–º –ø–µ—Ä—Å–æ–Ω–∞–∂
		if one_time_only:
			amulet_character.hide_amulet()
